# Meridian

./: .env.example  .gitignore  CONTRIBUTING.md  DEVPOST.md  README.md  WAVES_16_20_COMPLETION_REPORT.md  frontend_design.md  meridian_product_plan.docx  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tasks.md  vercel.json  vitest.config.ts
.claude/: settings.local.json
.claude/PRPs/plans/: conversation-memory-phase2.plan.md  mvp-foundation-weeks-1-12.plan.md
.claude/PRPs/prds/: research-workstation-phase2.prd.md
apps/api/: deps.py  main.py
apps/api/routers/: collections.py  markets.py  regime.py  research.py  screener.py  workspace.py
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
data/fixtures/: regime_snapshot.json  screener_snapshot.json
docs/: API.md  ARCHITECTURE.md  milestones.md  product_plan.md  schema.md
scripts/: author_trace.py  proof.py  test_harness.py  validate_demo.py
src/meridian/: settings.py
test-results/test_methodology-methodology-page-renders/: video.webm
test-results/test_regime-regime-strip-renders-all-dimensions/: video.webm
test-results/test_research_flow-research-flow-query-to-complete-brief/: video.webm
test-results/test_screener-screener-loads-sorts-filters-opens-drawer/: video.webm
test-results/test_smoke-smoke-homepage-chrome-renders/: video.webm
tests/e2e/: test_methodology.spec.ts  test_regime.spec.ts  test_research_flow.spec.ts  test_screener.spec.ts  test_smoke.spec.ts  test_workspace_persistence.spec.ts
(+251 files in other folders)
