[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "meridian"
version = "0.1.0"
description = "Meridian GLM-5.1 agentic financial research terminal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "httpx>=0.27.2",
  "pydantic>=2.9.2",
  "duckdb>=1.1.3",
  "chromadb>=0.5.15",
  "python-dotenv>=1.0.1",
  "structlog>=24.4.0",
  "pandas>=2.2.3",
  "pyarrow>=17.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/meridian", "apps"]
